# WebEngine

./: .gitignore  CMakeLists.txt  README.md  rebuild.bat  rebuild.sh
.github/: action.yml
.github/workflows/: main.yml
src/: index.html  main.cpp
src/core/: engine.cpp  engine.hpp
src/core/eventing/: event.hpp
src/core/open_gl/: renderer.cpp  renderer.hpp
src/core/parsers/: assimp_flags.hpp  assimp_parser.cpp  assimp_parser.hpp  shader_reader.cpp  shader_reader.hpp  texture_reader.cpp  texture_reader.hpp
src/core/services/: service_interface.hpp  service_locator.hpp
src/core/utils/: clock.hpp
src/resources/buffers/: index_buffer.hpp  vertex_buffer.hpp
src/resources/cameras/: camera.cpp  camera.hpp  camera_movement.cpp  camera_movement.hpp  projection_mode.hpp
src/resources/geometry/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  vertex.hpp
src/resources/levels/: base_object.cpp  base_object.hpp  default_level.cpp  default_level.hpp  house_scene.cpp  house_scene.hpp
src/resources/lights/: base_light.hpp  directional_light.hpp  point_light.cpp  point_light.hpp
src/resources/objects/: light_source.cpp  light_source.hpp  model.cpp  model.hpp  skybox.cpp  skybox.hpp
src/resources/shaders/: shader.cpp  shader.hpp  shader_type.hpp
src/resources/textures/: texture.cpp  texture.hpp  texture_filtering_mode.hpp
src/shaders/: external_model_fragment.fs  external_model_vertex.vs  light_source_fragment.fs  light_source_vertex.glsl  pbr_fragment.glsl  pbr_vertex.glsl  skybox_fragment.fs
src/ui/: material_selector.cpp  material_selector.hpp
src/window/: sdl2.cpp  sdl2.hpp
src/window/input/: key.hpp  key_state.hpp  mouse_button.hpp
src/window/settings/: sdl2_settings.hpp  sdl2_window_flags.hpp
